# bem-bubbles

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  change-color.sh  color.cpp  eigen_include.dir  main.cpp  open-mesh-test.cpp  oscillations-array.sh  oscillations.cpp  pinned-bubble-restart.cpp  pinned-bubble.cpp  pot-ext.cpp  radius.cpp  radius.py  remeshing-for-spherical-harmonics-pinned.cpp  remeshing-for-spherical-harmonics.cpp  sh-coeffs.sh  time-interpolation.cpp  topomanip.cpp
Bem/: CMakeLists.txt  Mesh.hpp
Bem/Integration/: CMakeLists.txt  Cubic.hpp  Integrator.cpp  Integrator.hpp  Interpolator.hpp  ResultTypes.cpp  ResultTypes.hpp  quadrature.hpp
Bem/Mesh/: CMakeLists.txt  CurvatureTensor.cpp  CurvatureTensor.hpp  FittingTool.cpp  FittingTool.hpp  HalfedgeMesh-point.cpp  HalfedgeMesh-point.hpp  HalfedgeMesh.cpp  HalfedgeMesh.hpp  Icosphere.cpp  Icosphere.hpp  Mesh.cpp  Mesh.hpp  MeshIO.cpp  MeshIO.hpp  MeshManip-old.cpp  MeshManip-point.cpp  MeshManip-point.hpp  MeshManip.cpp  MeshManip.hpp  Mesh_old.cpp  Mesh_old.hpp  Square.cpp  Square.hpp  Triplet.hpp  Tuplet.hpp
Bem/Simulation/: Bubble.hpp  CMakeLists.txt  ColocSim-group.cpp  ColocSim-group.hpp  ColocSim.cpp  ColocSim.hpp  ColocSimPin.cpp  ColocSimPin.hpp  ConConGalerkinSim.cpp  ConConGalerkinSim.hpp  ConConSim.cpp  ConConSim.hpp  ConLinGalerkinSim.cpp  ConLinGalerkinSim.hpp  ConLinSim.cpp  ConLinSim.hpp  GalerkinSim.cpp  GalerkinSim.hpp  HalfedgeMesh.hpp  LinLinSim.cpp  LinLinSim.hpp  MeshGroup.cpp  MeshGroup.hpp  SimData.cpp  SimData.hpp  Simulation-group.cpp  Simulation-group.hpp  Simulation.cpp  Simulation.hpp
Bem/basic/: Bem.hpp  Triplet.hpp  vector3d.hpp
init_conditions/: init-pinned.ply  r_env.csv  t_env.csv
more-examples/: taib-cloud.cpp  wall.cpp  wall_check.cpp
python_utils/: ply-icosphere.py  renderimage.py  streamlit-II.py  streamlit.py
python_utils/blender/: automatic.blend  automatic.blend1  automatic.py  automatic.sh
python_utils/pressure/: pressure-pot-plot.py
python_utils/spherical-harmonics/: spherical-harmonics-pinned.py  spherical-harmonics.py  visualising-sh-coeffs-pinned.py  visualising-sh-coeffs.py
python_utils/visualization/: visualisation.py
python_utils/visualization/interface/: index.html  models  plyvis.js
python_utils/website/: PLYLoader.js  index.html  plyvis.js  style.css
python_utils/website-II/: PLYLoader.js  index.html  main.js  package-lock.json
